@@ -22,6 +22,7 @@ version ? (????-??-??):
   - lmsd/ewx-pt: code rewrite, some improvements, added debug [alec]
   - RT: fixed replys to tickets created from userpanel with backend enabled [maniac]
   - BTS#0000880: Fixed transfer forms report printing [alec]
+  - BTS#0000877: Fixed node assignments for all promotion periods [alec]
 
 version 1.11.13 Dira (2011-04-07)
 
